--- a/assets/css/display_soo.css
+++ b/assets/css/display_soo.css
@@ -91,6 +91,17 @@
 @media only screen and (max-width: 768px) { .potcasts .sns_list { width: inherit; height: 100%; } }
 
 /* promotion e =================================================== */
+/* ========================================================== */
+/* recent episode s                                            */
+/* ========================================================== */
+.recent_episodes .recent_text { position: relative; }
+
+.recent_episodes .recent_text h2 { font-size: 32px; }
+
+.recent_episodes .recent_text p { line-height: 24px; margin-top: 16px; }
+
+.recent_episodes .recent_text .btn_recent { position: absolute; bottom: 0; right: 0; width: 195px; }
+
 /* soo e =================================================== */
 /* ---------------------------------------------------------- */
 
