--- a/dev/css_dev/layout/_header.scss
+++ b/dev/css_dev/layout/_header.scss
@@ -13,6 +13,8 @@ header {
   background-color: #fff;
   display: flex;
   justify-content: space-between;
+  z-index: 30;
+  overflow: hidden;
   h1 {
     margin: 0;
     a {
