--- a/dev/css_dev/layout/_nav.scss
+++ b/dev/css_dev/layout/_nav.scss
@@ -8,46 +8,150 @@
 /* nav s ==================================================== */
 
 header {
+  overflow: hidden;
   .gnb {
     float: left;
-    ul.menu {
-      float: left;
-      li {
-        float: left;
-        margin-right: 48px;
-        &:last-child {
-          margin-right: 32px;
-        }
-        @include mdq_pc {
-            margin-right: 30px;
-            &:last-child {
-                margin-right: 20px;
-            }
-        }
-        a {
-          display: block;
-          height: 100%;
-        }
-      }
-      }
-    ul.sns {
-      float: left;
-      li {
-        float: left;
-        margin-right: 16px;
-        &:last-child {
-          margin-right: 0;
-        }
-        a {
-          vertical-align: sub;
-        }
-      }
-    }
-    @include mdq_tab {
+    .mo_hamburger {
       display: none;
+    }
+    .bg_gray {
+      background-color: rgba(0,0,0,.5);
+      z-index: 0;
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: none;
+      transition: .5s;
+    }
+    .sub_menu {
+      ul.menu {
+        float: left;
+        li {
+          float: left;
+          margin-right: 48px;
+          &:last-child {
+            margin-right: 32px;
+          }
+          a {
+            display: block;
+            height: 100%;
+          }
+        }
+        }
+      ul.sns {
+        float: left;
+        li {
+          float: left;
+          margin-right: 16px;
+          &:last-child {
+            margin-right: 0;
+          }
+          a {
+            vertical-align: sub;
+          }
+        }
+      }
     }
   }
 }
 
+// mo_hamburger
+.mo_hamburger {
+  width: 50px;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  z-index: 100;
+  div {
+    background-color: $black;
+    width: 35px;
+    height: 4px;
+    margin: 7px;
+    border-radius: 30px;
+    transition: all .5s;
+  }
+}
+
+// js toggle
+.toggle {
+  .line1 {
+    transform: rotate(-45deg) translate(-8px, 7px);
+  }
+  .line2 {
+    opacity: 0;
+  }
+  .line3 {
+    transform: rotate(45deg) translate(-8px, -7px);
+  }
+}
+
+//js r0
+.mo_menu_on {
+  right: 0 !important;
+}
+
+//js block
+.mo_bg_on {
+  display: block !important;
+}
+
+.no_scroll {
+  overflow: hidden !important;
+  height: 100% !important;
+}
+
+
+/* ---------------------------------------------------------- */
+
+//mdq_pc
+header {
+  @include mdq_pc {
+    overflow: inherit;
+  }
+  .gnb {
+    .mo_hamburger {
+      @include mdq_pc {
+        display: block;
+      }
+    }
+    .sub_menu {
+      @include mdq_pc {
+        position: absolute;
+        right: -100%;
+        background-color: #fff;
+        height: 100vh;
+        width: 80%;
+        font-size: 30px;
+        text-align: right;
+        padding: 70px 50px;
+        transition: .5s;
+      }
+      ul.menu {
+        @include mdq_pc {
+          float: none;
+        }
+        li {
+          @include mdq_pc {
+            float: none;
+            margin: 0 0 30px 0;
+            &:last-child {
+              margin-right: 0px;
+          }
+          }
+        }
+      }
+      ul.sns {
+        @include mdq_pc {
+          position: absolute;
+          right: 50px;
+          bottom: 30px;
+        }
+      }
+    }
+  }
+}
 /* nav e ==================================================== */
 /* ---------------------------------------------------------- */
