--- a/dev/css_dev/pages/_soo.scss
+++ b/dev/css_dev/pages/_soo.scss
@@ -217,5 +217,32 @@
   }
 /* promotion e =================================================== */
 
+/* ========================================================== */
+/* recent episode s                                            */
+/* ========================================================== */
+
+.recent_episodes {
+  .recent_text {
+    position: relative;
+    h2 {
+      font-size: 32px;
+    }
+    p {
+      line-height: 24px;
+      margin-top: 16px;
+    }
+    .btn_recent {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 195px;
+    }
+  }
+  .recent_video { 
+    
+  }
+
+}
+
 /* soo e =================================================== */
 /* ---------------------------------------------------------- */
