--- a/dev/css_dev/utils/_variables.scss
+++ b/dev/css_dev/utils/_variables.scss
@@ -87,3 +87,8 @@ $font-48r:48px;
 $font-50r:50px;
 $font-52r:52px;
 $font-60r:60px;
+
+//margin
+$margin-t:128px;
+$margin-t-m:80px;
+$margin-t-s:30px;
