--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -277,9 +277,9 @@ html, body { width: 100%; height: 100%; box-sizing: border-box; background: var(
 
 body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; color: #000; }
 
-:root[color-theme='light'] { --background: #fff; --fontColor: #1f1f1fea; }
+:root[color-theme='light'] { --background: #fff; --fontColor: #000; }
 
-:root[color-theme='dark'] { --background: #1f1f1fea; --fontColor: #fff; }
+:root[color-theme='dark'] { --background: #000; --fontColor: #fff; }
 
 .container { max-width: 1920px; margin: 0 auto; }
 
@@ -296,6 +296,8 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 .heading_5 { font-size: 16px; font-weight: 400; }
 
 .heading_6 { font-size: 12px; font-weight: 400; margin-bottom: 0; }
+
+.con-m { margin-top: 128px; }
 
 .prime_color { background-color: #503AE7; }
 
@@ -351,6 +353,50 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .instagram_s { background: url(../../../assets/images/ico/ico_instagram.svg) no-repeat center/100%; width: 16px; height: 16px; display: inline-block; }
 
+/* layout_your_inbox */
+.inbox_wrap { display: flex; justify-content: center; align-items: center; max-width: 1280px; margin: 128px auto 0 auto; height: 310px; text-align: center; color: #fff; background: url(../../assets/images/contents/main_banner.png) no-repeat center; }
+
+.inbox_wrap .email_send { margin: 32px auto 0 auto; }
+
+.inbox_wrap .email_send input[type=submit] { background-color: #1AD993; }
+
+/* layout_list */
+.item_list_wrap { display: flex; justify-content: space-evenly; }
+
+.item_list_wrap > li { display: flex; align-items: flex-end; }
+
+.item_list_wrap > li > a { display: block; }
+
+.item_list_wrap > li:first-child { width: 416px; height: 516px; background: url(../../assets/images/contents/bg_con_1.png) no-repeat; }
+
+.item_list_wrap > li:first-child > a { text-indent: -999px; font-size: 0; }
+
+.item_list_wrap > li:nth-child(2) { background: url(../../assets/images/contents/articles_1.png) no-repeat; }
+
+.item_list_wrap > li:nth-child(3) { background: url(../../assets/images/contents/articles_2.png) no-repeat; }
+
+/* tablet 지정 */
+@media only screen and (max-width: 768px) { .heading_1 { font-size: 30px; }
+  .heading_2 { font-size: 28px; }
+  .heading_3 { font-size: 18px; }
+  .heading_4 { font-size: 16px; }
+  .heading_5 { font-size: 14px; }
+  .heading_6 { font-size: 12px; }
+  .con-m { margin-top: 80px; }
+  .con_pd { padding: 0 20px; }
+  /* your_inbox */
+  .inbox_wrap { height: auto; background-size: 100%; }
+  .inbox_wrap .email_send { margin: 32px auto 0 auto; } }
+
+/* //tablet 지정 */
+/* mobile 지정 */
+@media only screen and (max-width: 425px) { .con-m { margin-top: 30px; }
+  /* your_inbox */
+  .inbox_wrap { background-image: none; background-color: #503AE7; width: 100%; height: 130px; margin-bottom: 60px; }
+  .inbox_wrap .heading_2 { font-size: 16px; }
+  .inbox_wrap .email_send { margin: 16px auto 0 auto; } }
+
+/* //mobile 지정 */
 /* base e =================================================== */
 /* ---------------------------------------------------------- */
 /* ========================================================== */
